--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="appear" align="center">
-  <div class="catalog-title">
+  <div class="catalogue-title">
     <h1>MediaRentalHub</h1>
-    <p>Where entertainment finds its home</p>
+    <p style="  font-size: 25px; color: #666;">Where entertainment finds its home</p>
   </div>
 </div>
 
@@ -25,7 +25,7 @@
       <img
         class="card-img-top"
         src="{{ book.image_url }}"
-        alt="Book image"
+        alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
       <div class="card-body">
@@ -46,7 +46,7 @@
       <img
         class="card-img-top"
         src="{{ movie.image_url }}"
-        alt="Movie image"
+        alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
       <div class="card-body">
@@ -70,7 +70,7 @@
       <img
         class="card-img-top"
         src="{{ movie.image_url }}"
-        alt="Movie image"
+        alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
       <div class="card-body">
@@ -85,7 +85,7 @@
       <img
         class="card-img-top"
         src="{{ book.image_url }}"
-        alt="Book image"
+        alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
       <div class="card-body">
@@ -101,7 +101,7 @@
       <img
         class="card-img-top"
         src="{{ movie.image_url }}"
-        alt="Movie image"
+        alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
       <div class="card-body">
@@ -115,7 +115,7 @@
       <img
         class="card-img-top"
         src="{{ book.image_url }}"
-        alt="Book image"
+        alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
       <div class="card-body">
@@ -132,7 +132,7 @@
       <img
         class="card-img-top"
         src="{{ movie.image_url }}"
-        alt="Movie image"
+        alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
       <div class="card-body">
@@ -147,7 +147,7 @@
       <img
         class="card-img-top"
         src="{{ book.image_url }}"
-        alt="Book image"
+        alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
       <div class="card-body">
