--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -57,29 +57,26 @@ h2 {
   margin: 30px;
 }
 
+
 .catalog-title {
   text-align: center;
   margin-bottom: 40px;
 }
 
 .catalog-title h1 {
-  font-size: 36px;
+  font-size: 75px;
   font-weight: bold;
   color: #4a90e2;
   margin-bottom: 10px;
-}
-
-.catalog-title p {
-  font-size: 25px;
-  color: #666;
+  margin-top: 2%;
 }
 
 .appear h1 {
   font-weight: bold;
   font-size: 75px;
-  margin-top: 2%;
-  font-weight: bold;
   color: #4a90e2;
+  margin-bottom: 10px;
+  margin-top: 2%;
 }
 
 .appear {
@@ -101,61 +98,77 @@ h2 {
   .slider-frame {
     height: 300px;
     margin-left: 0;
-    margin-top: 2%; 
+    margin-top: 2%;
   }
-  h1{
+  h1 {
     font-size: 30px !important;
   }
 }
 
 @media only screen and (max-width: 480px) {
-  h1{
+  h1 {
     font-size: 30px !important;
   }
-  
+
   .slider-frame {
     display: grid;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 400px;
-    margin-left: 0%; 
+    margin-left: 0%;
     margin-top: 2%;
     overflow: hidden;
-}
+  }
 
-.centered {
+  .centered {
     margin: 0 auto;
-}
+  }
 
-.slider-frame ul {
+  .slider-frame ul {
     display: flex;
     padding: 0;
     width: 500%;
     animation: slide 15s infinite alternate ease-in-out;
-}
+  }
 
-.slider-frame li {
+  .slider-frame li {
     width: 20%;
     list-style: none;
-}
+  }
 
-.slider-frame img {
+  .slider-frame img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
     object-position: center;
-}
+  }
 
-@keyframes slide {
-    0% {margin-left: 0;}
-    20% {margin-left: 0;}
-    25% {margin-left: -100%;}
-    45% {margin-left: -100%;}
-    50% {margin-left: -200%;}
-    70% {margin-left: -200%;}
-    75% {margin-left: -300%;}
-    100% {margin-left: -300%;}
-}
+  @keyframes slide {
+    0% {
+      margin-left: 0;
+    }
+    20% {
+      margin-left: 0;
+    }
+    25% {
+      margin-left: -100%;
+    }
+    45% {
+      margin-left: -100%;
+    }
+    50% {
+      margin-left: -200%;
+    }
+    70% {
+      margin-left: -200%;
+    }
+    75% {
+      margin-left: -300%;
+    }
+    100% {
+      margin-left: -300%;
+    }
+  }
 }
