--- a/src/app/books/manage-books/manage-books.component.html
+++ b/src/app/books/manage-books/manage-books.component.html
@@ -41,7 +41,7 @@
                         style="margin: 5px;"
                         data-toggle="tooltip" 
                         data-placement="top"
-                        title="Edit movie"
+                        title="Edit book"
                         >
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -69,7 +69,7 @@
                             style="margin: 5px"
                             data-toggle="tooltip" 
                             data-placement="top" 
-                            title="Delete movie"
+                            title="Delete book"
                             >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
