--- a/src/app/movies/movies-cat/movies-cat.component.html
+++ b/src/app/movies/movies-cat/movies-cat.component.html
@@ -2,7 +2,7 @@
   <h1>🎥 Explore Our Collection of Movies 🎥</h1>
   <p>Discover a wide range of movies carefully selected for you.</p>
 </div>
-<div style="margin-bottom: -3%; margin-left: 8.2%;"  class="select-container">
+<div style="margin-bottom: -3%; margin-left: 1.5%;"  class="select-container">
   <button style="width: 15%;" class="customButton" (click)="setPage(pageNumber, 'mediaId', order)">Order by Antiquity</button>
   <button style="width: 15%;" class="customButton" (click)="setPage(pageNumber, 'gender', order)">Order by Gender</button>
   <button style="width: 15%;" class="customButton" (click)="setPage(pageNumber, 'title', order)">Order by Title</button>
@@ -52,37 +52,47 @@
 <app-search-box (onSearch)="search($event)"></app-search-box>
 
 @if (page) {
-  <div class="grid-container" style="margin-right: 9%;">
-    @for (movie of movies; track $index) { 
-      @if (movie.available === true) {
-        <div class="card mb-4" style="width: 18rem; max-height: 25rem;">
-          <img src="{{ movie.image_url }}" class="card-img-top" alt="Movie cover" />
-          <div class="card-body">
-            <h5 class="card-title">{{ movie.title }}</h5>
-            <p class="card-text">{{ movie.gender }}</p>
-            <div class="d-flex justify-content-around">
-              <a style="font-size: 20px;" routerLink="/movies/infoMovie/{{ movie.media_id }}" class="icon-link" data-toggle="tooltip" data-placement="top" title="Info movie">
-                Info
-                <svg xmlns="http://www.w3.org/2000/svg" width="3rem" height="3rem" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
-                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"></path>
-                  <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"></path>
-                </svg>
-              </a>
-              @if (isLogin() === true) {
-                <a style="font-size: 20px;" routerLink="/media/rent/{{movie.media_id}}" class="icon-link" data-toggle="tooltip" data-placement="top" title="Rent this media">
-                  Rent
-                  <svg xmlns="http://www.w3.org/2000/svg" width="3rem" height="3rem" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
-                    <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"></path>
-                  </svg>
-                </a>
-              }
+<div class="grid-container">
+  @for (movie of movies; track $index) {
+    @if (movie.available === true) {
+      <div class="grid-item">
+        <div class="card mb-3">
+          <div class="row g-0" style="height: 100%;">
+            <div class="col-md-4">
+              <img src="{{movie.image_url}}" class="img-fluid rounded-start card-img" alt="Movie cover">
+            </div>
+            <div class="col-md-8 d-flex flex-column">
+              <div class="card-body d-flex flex-column justify-content-between">
+                <div>
+                  <h5 class="card-title">{{ movie.title }}</h5>
+                  <p class="card-text">{{ movie.gender }}</p>
+                </div>
+                <div class="d-flex justify-content-around mt-auto">
+                  <a style="font-size: 20px;" routerLink="/movies/infoMovie/{{ movie.media_id }}" class="icon-link" data-toggle="tooltip" data-placement="top" title="Info movie">
+                    Info
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">
+                      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"></path>
+                      <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0"></path>
+                    </svg>
+                  </a>
+                  @if (isLogin() === true) {
+                    <a style="font-size: 20px;" routerLink="/media/rent/{{movie.media_id}}" class="icon-link" data-toggle="tooltip" data-placement="top" title="Rent this media">
+                      Rent
+                      <svg xmlns="http://www.w3.org/2000/svg" width="3rem" height="3rem" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
+                        <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"></path>
+                      </svg>
+                    </a>
+                  }
+                </div>
+              </div>
+              <p class="text-center mt-auto">Director: <b>{{movie.director}}</b></p>
             </div>
           </div>
-          <p class="text-center">Director: <b>{{movie.director}}</b></p>
         </div>
-      } 
+      </div>
     }
-  </div>
+  }
+</div>
   
 
   
