--- a/src/app/books/book-form/book-form.component.html
+++ b/src/app/books/book-form/book-form.component.html
@@ -35,7 +35,7 @@
           }
           <br>
           <label>Image</label>
-          <input type="file" id="image" formControlName="imageUrl" (change)="getFile($event)">
+          <input type="file" id="image" formControlName="image_url" (change)="getFile($event)">
           @if (this.id != 0 && this.id != undefined) {
             <input type="submit" class="button" value="Edit"/>
           }@else {
