--- a/src/app/books/books-cat/books-cat.component.html
+++ b/src/app/books/books-cat/books-cat.component.html
@@ -67,7 +67,9 @@
               <div class="col-md-8 d-flex flex-column">
                 <div class="card-body d-flex flex-column justify-content-between">
                   <div>
-                    <h5 class="card-title">{{ book.title }}</h5>
+                    <div class="card-title">
+                      <h5 data-toggle="tooltip" data-placement="top" title="{{book.title}}">{{ book.title }}</h5>
+                    </div>
                     <p class="card-text">{{ book.gender }}</p>
                   </div>
                   <div class="d-flex justify-content-around mt-auto">
