--- a/src/app/books/books-cat/books-cat.component.css
+++ b/src/app/books/books-cat/books-cat.component.css
@@ -1,30 +1,61 @@
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  justify-content: center;
-  align-items: center;
-  margin-left: 150px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-left: 15px;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 10px;
 }
 
 .card {
-  height: 360px;
+  width: 455px;
+  height: 250px;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
 }
 
-.card img {
-  height: 120px;
-  object-fit: cover;
+.card-img {
   width: 100%;
+  height: 100%; /* Ajusta este valor para el tamaño deseado de la imagen */
+  object-fit: cover;
+}
+
+.card-body {
+  flex: 1; /* Permite que el cuerpo de la tarjeta ocupe el espacio restante */
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-title {
+  font-size: 1.5rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card-text {
-  overflow: hidden;
-  text-overflow: ellipsis; 
-  white-space: nowrap;
+  font-size: 1rem;
+}
+
+.icon-link {
+  display: inline-flex;
+  align-items: center;
+}
+
+.icon-link svg {
+  margin-left: 0.5rem;
+}
+
+.row.g-0 {
+  height: 100%;
 }
 
 .custom-select {
