--- a/src/app/movies/movies-cat/movies-cat.component.css
+++ b/src/app/movies/movies-cat/movies-cat.component.css
@@ -1,30 +1,63 @@
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  justify-content: center;
-  align-items: center;
-  margin-left: 150px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-left: 15px;
+}
+
+.grid-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 10px;
 }
 
 .card {
-  height: 400px;
+  width: 455px;
+  height: 250px;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
 }
 
-.card img {
-  height: 120px;
-  object-fit: cover;
+.card-img {
   width: 100%;
+  height: 100%; /* Ajusta este valor para el tamaño deseado de la imagen */
+  object-fit: cover;
+}
+
+.card-body {
+  flex: 1; /* Permite que el cuerpo de la tarjeta ocupe el espacio restante */
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-title {
+  font-size: 1.2em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  font-weight: bold;
 }
 
 .card-text {
-  overflow: hidden;
-  text-overflow: ellipsis; 
-  white-space: nowrap;
+  font-size: 1rem;
+}
+
+.icon-link {
+  display: inline-flex;
+  align-items: center;
+}
+
+.icon-link svg {
+  margin-left: 0.5rem;
+}
+
+.row.g-0 {
+  height: 100%;
 }
 
 .custom-select {
@@ -139,6 +172,7 @@
   padding: 8px 12px;
   cursor: pointer;
   height: 45px;
+  width: 15%;
 }
 
 .customButton:hover {
@@ -164,7 +198,7 @@
   }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 500px) {
   .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -175,5 +209,14 @@
     margin-top: 20px;
     margin-bottom: 20px;
   }
-
+  .customButton {
+    background-color: #f0f0f0;
+    border: none;
+    border-radius: 5px; 
+    color: #555;
+    padding: 8px 12px;
+    cursor: pointer;
+    height: 35px;
+    width: 50% !important;
+  }
 }
