--- a/src/app/movies/movies-cat/movies-cat.component.css
+++ b/src/app/movies/movies-cat/movies-cat.component.css
@@ -35,12 +35,10 @@
 }
 
 .card-title {
-  font-size: 1.2em;
+  font-size: 1.5rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 100%;
-  font-weight: bold;
 }
 
 .card-text {
@@ -172,7 +170,6 @@
   padding: 8px 12px;
   cursor: pointer;
   height: 45px;
-  width: 15%;
 }
 
 .customButton:hover {
@@ -198,7 +195,7 @@
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 480px) {
   .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -209,14 +206,5 @@
     margin-top: 20px;
     margin-bottom: 20px;
   }
-  .customButton {
-    background-color: #f0f0f0;
-    border: none;
-    border-radius: 5px; 
-    color: #555;
-    padding: 8px 12px;
-    cursor: pointer;
-    height: 35px;
-    width: 50% !important;
-  }
+
 }
