--- a/src/app/movies/movies-cat/movies-cat.component.html
+++ b/src/app/movies/movies-cat/movies-cat.component.html
@@ -3,9 +3,9 @@
   <p>Discover a wide range of movies carefully selected for you.</p>
 </div>
 <div style="margin-bottom: -3%; margin-left: 1.5%;"  class="select-container">
-  <button class="customButton" (click)="setPage(pageNumber, 'mediaId', order)">Order by Antiquity</button>
-  <button class="customButton" (click)="setPage(pageNumber, 'gender', order)">Order by Gender</button>
-  <button class="customButton" (click)="setPage(pageNumber, 'title', order)">Order by Title</button>
+  <button style="width: 15%;" class="customButton" (click)="setPage(pageNumber, 'mediaId', order)">Order by Antiquity</button>
+  <button style="width: 15%;" class="customButton" (click)="setPage(pageNumber, 'gender', order)">Order by Gender</button>
+  <button style="width: 15%;" class="customButton" (click)="setPage(pageNumber, 'title', order)">Order by Title</button>
 
   <div class="button-container">
     @if (order === false) {
