--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <body>
-  <div class="container" style="margin-top: 10%;">
+  <div class="container">
     <input type="checkbox" id="check" />
     <div class="login form">
       <header>Login</header>
