--- a/src/app/movies/movies-cat/movies-cat.component.css
+++ b/src/app/movies/movies-cat/movies-cat.component.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  margin-left: 15px;
+  margin-right: 5%;
 }
 
 .grid-item {
@@ -35,12 +35,10 @@
 }
 
 .card-title {
-  font-size: 1.2em;
+  font-size: 1.5rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 100%;
-  font-weight: bold;
 }
 
 .card-text {
@@ -74,7 +72,6 @@
 .select-container {
   display: flex;
   align-items: center; 
-  margin-left: 155px;
   margin-top: 30px;
 }
 
@@ -82,7 +79,6 @@
   display: flex;
   justify-content: space-between;
   width: 200px;
-  margin-left: 10px;
 }
 
 .customButton {
@@ -172,7 +168,6 @@
   padding: 8px 12px;
   cursor: pointer;
   height: 45px;
-  width: 15%;
 }
 
 .customButton:hover {
@@ -185,38 +180,52 @@
   height: 25px !important;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     justify-content: center;
     align-items: center;
-    margin-left: 40px;
+    margin-left: 5.5%;
     margin-top: 20px;
     margin-bottom: 20px;
   }
+
+  .select-container {
+    margin-left: 4.5% !important;
+  }
+  
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 480px) {
+
   .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    margin-left: 40px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-left: 0px !important;
   }
-  .customButton {
-    background-color: #f0f0f0;
-    border: none;
-    border-radius: 5px; 
-    color: #555;
-    padding: 8px 12px;
-    cursor: pointer;
-    height: 35px;
-    width: 50% !important;
+
+  .select-container {
+    margin-left: 2px !important;
+    height: 30px;
   }
+
+  .select-container button{
+    margin-left: 2% !important;
+    height: 90px;
+    width: 90px !important;
+    font-size: 17px !important;
+  }
+
+  .card{
+    height: 200% !important;
+  }
+
+  .card-img {
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
+  }
+
 }
