--- a/src/app/books/manage-books/manage-books.component.css
+++ b/src/app/books/manage-books/manage-books.component.css
@@ -88,3 +88,23 @@ h1 {
   margin-top: 20px;
   margin-right: 35% !important;
 }
+
+
+@media only screen and (max-width: 468px) {
+
+  h1 {
+    font-size: 35px !important;
+  }
+
+  .icon-link > .bi {
+    width: 3em !important;
+    height: 3em !important;
+    margin: 10px !important;
+  }
+
+  .search-container {
+    margin-left: 52% !important;
+    margin-top: 0% !important;
+  }
+  
+}
