--- a/src/app/movies/movies-cat/movies-cat.component.css
+++ b/src/app/movies/movies-cat/movies-cat.component.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  margin-left: 15px;
+  margin-right: 5%;
 }
 
 .grid-item {
@@ -72,7 +72,6 @@
 .select-container {
   display: flex;
   align-items: center; 
-  margin-left: 155px;
   margin-top: 30px;
 }
 
@@ -80,7 +79,6 @@
   display: flex;
   justify-content: space-between;
   width: 200px;
-  margin-left: 10px;
 }
 
 .customButton {
@@ -182,29 +180,52 @@
   height: 25px !important;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
   .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     justify-content: center;
     align-items: center;
-    margin-left: 40px;
+    margin-left: 5.5%;
     margin-top: 20px;
     margin-bottom: 20px;
   }
+
+  .select-container {
+    margin-left: 4.5% !important;
+  }
+  
 }
 
 @media only screen and (max-width: 480px) {
+
   .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    margin-left: 40px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-left: 0px !important;
+  }
+
+  .select-container {
+    margin-left: 2px !important;
+    height: 30px;
+  }
+
+  .select-container button{
+    margin-left: 2% !important;
+    height: 90px;
+    width: 90px !important;
+    font-size: 17px !important;
+  }
+
+  .card{
+    height: 200% !important;
+  }
+
+  .card-img {
+    width: 100%;
+    height: 100%; 
+    object-fit: cover;
   }
 
 }
