--- a/src/app/movies/manage-movies/manage-movies.component.css
+++ b/src/app/movies/manage-movies/manage-movies.component.css
@@ -32,7 +32,7 @@
 .table {
   width: 100%;
   border-collapse: collapse;
-  margin: 20px;
+  margin-bottom: 20px;
 }
 
 .table th,
@@ -88,7 +88,7 @@ h1{
   margin-right: 35% !important;
 }
 
-@media only screen and (max-width: 560px) {
+@media only screen and (max-width: 468px) {
 
   h1 {
     font-size: 35px !important;
