--- a/src/app/movies/movies-cat/movies-cat.component.css
+++ b/src/app/movies/movies-cat/movies-cat.component.css
@@ -1,7 +1,34 @@
+/* Estilos generales */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  min-height: 100vh;
+  width: 100%;
+  background-color: rgb(245, 245, 220, 100%);
+}
+
+.container {
+  max-width: 430px;
+  width: 100%;
+  background: #fff;
+  border-radius: 7px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  margin: 10% auto;
+  padding: 2rem;
+}
+
+/* Grid container */
 .grid-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  padding: 20px;
+  justify-content: center;
   margin-right: 5%;
 }
 
@@ -12,6 +39,7 @@
   margin: 0 10px;
 }
 
+/* Card */
 .card {
   width: 455px;
   height: 250px;
@@ -65,13 +93,12 @@
   width: 200px;
   height: 30px;
   font-size: 14px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .select-container {
   display: flex;
-  align-items: center; 
+  align-items: center;
   margin-top: 30px;
 }
 
@@ -92,6 +119,7 @@
   background-color: #f0f0f0;
 }
 
+/* Pagination */
 .pagination-container {
   text-align: center;
   margin-top: 20px;
@@ -157,13 +185,13 @@
 .button-container {
   display: flex;
   align-items: center;
-  margin-left: 10px; 
+  margin-left: 10px;
 }
 
 .customButton {
   background-color: #f0f0f0;
   border: none;
-  border-radius: 5px; 
+  border-radius: 5px;
   color: #555;
   padding: 8px 12px;
   cursor: pointer;
@@ -180,11 +208,10 @@
   height: 25px !important;
 }
 
+/* Responsive adjustments */
 @media only screen and (min-width: 768px) {
   .grid-container {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
     justify-content: center;
     align-items: center;
     margin-left: 5.5%;
@@ -195,13 +222,10 @@
   .select-container {
     margin-left: 4.5% !important;
   }
-  
 }
 
 @media only screen and (max-width: 480px) {
-
   .grid-container {
-    display: grid;
     grid-template-columns: repeat(1, 1fr);
     margin-left: 0px !important;
   }
@@ -211,22 +235,21 @@
     height: 30px;
   }
 
-  .select-container button{
+  .select-container button {
     margin-left: 2% !important;
     height: 90px;
     width: 90px !important;
     font-size: 17px !important;
   }
 
-  .card{
+  .card {
     height: 100% !important;
     width: 70% !important;
   }
 
   .card-img {
     width: 100%;
-    height: 100%; 
+    height: 100%;
     object-fit: cover;
   }
-
 }
