--- a/src/app/books/books-cat/books-cat.component.css
+++ b/src/app/books/books-cat/books-cat.component.css
@@ -22,12 +22,12 @@
 
 .card-img {
   width: 100%;
-  height: 100%; /* Ajusta este valor para el tamaño deseado de la imagen */
+  height: 100%;
   object-fit: cover;
 }
 
 .card-body {
-  flex: 1; /* Permite que el cuerpo de la tarjeta ocupe el espacio restante */
+  flex: 1;
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -203,7 +203,15 @@
   .grid-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    margin-left: 0px !important;
+    margin-left: 35px !important;
+  }
+
+  .grid-item{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0 10px;
+    width: 68% !important; 
   }
 
   .select-container {
