Arreglo de la tabla

--- a/src/app/books/manage-books/manage-books.component.css
+++ b/src/app/books/manage-books/manage-books.component.css
@@ -107,4 +107,16 @@ h1 {
     margin-top: 0% !important;
   }
   
+  .table-container {
+    overflow-x: scroll; 
+  }
+
+  .table-container table {
+      width: 100%;
+  }
+
+  .table-container th, .table-container td {
+      padding: 8px;
+  }
+  
 }
