--- a/src/app/movies/movies-cat/movies-cat.component.html
+++ b/src/app/movies/movies-cat/movies-cat.component.html
@@ -56,7 +56,7 @@
   @for (movie of movies; track $index) {
     @if (movie.available === true) {
       <div class="grid-item">
-        <div class="card mb-3" style="width: 18rem;">
+        <div class="card mb-3">
           <div class="row g-0" style="height: 100%;">
             <div class="col-md-4">
               <img src="{{movie.image_url}}" class="img-fluid rounded-start card-img" alt="Movie cover">
