--- a/src/app/user/modify-user/modify-user.component.html
+++ b/src/app/user/modify-user/modify-user.component.html
@@ -4,6 +4,12 @@
     <div class="login form">
       <header>Edit User</header>
       <form [formGroup]="myForm" (ngSubmit)="updateUser()">
+        <label>Id</label>
+        <input
+          type="number"
+          formControlName="user_id"
+          readonly
+        />
         <label>Name</label>
         <input
           type="text"
