--- a/src/app/books/book-form/book-form.component.html
+++ b/src/app/books/book-form/book-form.component.html
@@ -37,9 +37,9 @@
           <label>Image</label>
           <input type="file" id="image" formControlName="image_url" (change)="getFile($event)">
           @if (this.id != 0 && this.id != undefined) {
-            <input type="submit" class="button" value="Edit"/>
+            <input type="submit" (click)="editBook()" class="button" value="Edit"/>
           }@else {
-            <input type="submit" class="button" value="Add"/>
+            <input type="submit" (click)="addBook()" class="button" value="Add"/>
           }
         </form>
       </div>
