--- a/src/app/books/manage-books/manage-books.component.html
+++ b/src/app/books/manage-books/manage-books.component.html
@@ -42,7 +42,7 @@
                           style="margin: 5px;"
                           data-toggle="tooltip" 
                           data-placement="top"
-                          title="Edit movie"
+                          title="Edit book"
                           >
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -70,7 +70,7 @@
                               style="margin: 5px"
                               data-toggle="tooltip" 
                               data-placement="top" 
-                              title="Delete movie"
+                              title="Delete book"
                               >
                               <svg
                                   xmlns="http://www.w3.org/2000/svg"
